// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makePlugin 1`] = `
"
          <div className=\\"\\">
            <pluginprovider
              name='test'
              plugins=!{props.plugins!}
              options=!{!{\\"options\\":[],\\"properties\\":!{!}!}!}
            >
        
          </pluginprovider>
        </div>
      "
`;

exports[`makePlugin 2`] = `
"
          <div className=\\"\\">
            <pluginprovider
              name='test'
              plugins=!{props.plugins!}
              options=!{!{\\"options\\":[\\"with\\",\\"some\\",\\"options\\"],\\"properties\\":!{!}!}!}
            >
        
          </pluginprovider>
        </div>
      "
`;

exports[`makePlugin 3`] = `
"
          <div className=\\"\\">
            <pluginprovider
              name='test'
              plugins=!{props.plugins!}
              options=!{!{\\"options\\":[],\\"properties\\":!{\\"with\\":\\"some\\",\\"properties\\":10!}!}!}
            >
        
          </pluginprovider>
        </div>
      "
`;

exports[`makePlugin 4`] = `
"
          <div className=\\"\\">
            <pluginprovider
              name='test'
              plugins=!{props.plugins!}
              options=!{!{\\"options\\":[\\"with\\",\\"both\\"],\\"properties\\":!{\\"properties\\":\\"options\\"!}!}!}
            >
        
          </pluginprovider>
        </div>
      "
`;
